Update closing message in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     I’m so grateful to have you in my life.  
     I love you forever 💕
   </p>
-  <p>— Yours always 💖</p>
+  <p>— Yours always monaa🥹💖</p>
 </div>
 
 </body>
