Update closing message in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     my happiness, and my forever 💕  
     I love you more than words can say.
   </p>
-  <p>— Yours always 💖</p>
+  <p>— Ninte swantham…mona🥹💋🫂 </p>
 </div>
 
 <script>
